no fade-in on mobile (prevents FOUC)

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -303,6 +303,12 @@ div {
       font-size: 60%;
       display: none;
   }
+    main {
+      animation: none;
+      -moz-animation: none;
+      -webkit-animation: none;
+      -o-animation: none;
+  }
 }
 
 .preview-title {
